k8s/infra/axon-deployment.yml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: axon
  labels:
    app: axon
spec:
  serviceName: axon
  replicas: 1
  selector:
    matchLabels:
      app: axon
  template:
    metadata:
      labels:
        app: axon
    spec:
      containers:
      - name: axon
        image: axoniq/axonserver
        ports:
        - name: gui
          containerPort: 8024
          protocol: TCP
        - name: grpc
          containerPort: 8124
          protocol: TCP
        readinessProbe:
          httpGet:
            port: 8024
            path: /actuator/health
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 5
        livenessProbe:
          httpGet:
            port: 8024
            path: /actuator/health
          initialDelaySeconds: 30
          timeoutSeconds: 1
          periodSeconds: 5
