k8s/infra/elasticsearch-hq-service.yml
kind: Service
apiVersion: v1
metadata:
  name: elasticsearch-hq
  labels:
    app: elasticsearch-hq
spec:
  type: ClusterIP
  selector:
    app: elasticsearch-hq
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 5000
