k8s/infra/axon-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: axon-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: axon.coffee.software.altkom.pl
    http:
      paths:
      - path: /
        backend:
          serviceName: axon
          servicePort: 8024
